--- a/evacursos-jr/package.json
+++ b/evacursos-jr/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "jsonapi-serializer": "^3.6.6",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
