--- a/evacursos-jr/package.json
+++ b/evacursos-jr/package.json
@@ -44,7 +44,9 @@
     "webpack-manifest-plugin": "^2.2.0"
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "jsonapi-serializer": "^3.6.6",
     "jsonwebtoken": "^8.5.1",
